--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-beautifulsoup4
-pandas
-requests
+usaddress
+streamlit>=1.27.0
+pandas>=2.0.0
+numpy>=1.24.0
